Removed StringUtils dependency